fix footer dark mode v2

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -4,7 +4,7 @@
     left:0;
     right: 0;
     height: 75px;
-    background-color: var(--color-background);
+    background-color: var(--color-background-footer);
     padding: auto;
     color: var(--color-footer-text-color);
 }
