--- a/src/styles/theme.dark.css
+++ b/src/styles/theme.dark.css
@@ -24,5 +24,6 @@ html[data-theme='dark'] {
     --color-background-table-row-tinted: #282D31;
     --color-background-toggle: #5C5C5C;
     --color-background-tooltip: #97a1aa;
+    --color-background-footer: #353b41;
 
   }
