--- a/src/styles/theme.default.css
+++ b/src/styles/theme.default.css
@@ -17,14 +17,14 @@
   --color-background-input: white;
   --color-background-footer: #004a8a;
   --color-footer-link: #0080ff;
-  --color-footer-text-color: #0080ff;
+  --color-footer-text-color: #cfd4d8;
   --color-input-placeholder: #7d7b7a;
   --color-listitem-hover: #f5f7f9;
   --color-listitem-active: #e4f0ff;
   --color-background-table-header: #E9ECEE;
   --color-background-table-row-tinted: #F8F9F9;
   --color-background-toggle: #CCCC;
-  --color-background-tooltip: #000000
+  --color-background-tooltip: #000000;
 
 
 
